backend/k8s/manifests/00-namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: networking
---
apiVersion: v1
kind: Namespace
metadata:
  name: load-testing
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
