backend/k8s/manifests/03-locust.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-load-tester
  namespace: load-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
        - name: locust
          image: locustio/locust:latest
          command: ["locust", "-f", "/mnt/locust/locustfile.py", "--host", "http://fastapi-service.backend.svc.cluster.local:80"]
          ports:
            - containerPort: 8089
          volumeMounts:
            - name: locust-script-volume
              mountPath: /mnt/locust
      volumes:
        - name: locust-script-volume
          hostPath:
            path: /mnt/locust
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: locust-ui
  namespace: load-testing
spec:
  type: ClusterIP
  selector:
    app: locust
  ports:
    - port: 8089
      targetPort: 8089
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
  namespace: load-testing
spec:
  rules:
    - host: locust.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust-ui
                port:
                  number: 8089
